--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 <body>
 
     <div id="connexion">
-
+        <img class="titrelogo" src="logo.png" alt="">
         <form id="connect_form" method="post" action="user_login.html">
-            <h1>Kwick Kwick</h1>
+
+
 
             <p>
                 <label for="pseudo" id="login">login:</label>
