--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
     <div id="inscription">
         <form name="mon-formulaire1" method="POST">
             <p>
-                <label for="email">Email</label><br/>
-                <input id="mail" type="text" placeholder="Enter Email" name="email" required class="mail">
+                <label for="email" class="typo">login</label><br/>
+                <input id="mail" type="text" placeholder="Enter you login" name="email" required class="mail">
             </p>
             <p>
-                <label for="psw">Password</label><br/>
-                <input id="pass" type="password" name="psw" required>
+                <label for="psw" class="typo">Password</label><br/>
+                <input id="pass" type="password" name="psw" placeholder="Enter you password" required>
 
                 <p>
-                    <label for="psw-repeat">Repeat Password</label><br/>
+                    <label for="psw-repeat" class="typo">Repeat Password</label><br/>
                     <input id="pass2" type="password" placeholder="Repeat Password" name="psw-repeat" required>
                 </p>
 
